# mixed_boundary_approximation

./: .gitignore  CMakeLists.txt  README.md
docs/: 1.1.md  1.2_mathematical_formulation_correction.md  2.1.1_basis_correction_math_foundation.md  2.1.2_interpolation_polynomial_construction.md  2.1.3.md  2.1.4.md  2.1.5.md  2.1.6.md  2.1.7.md  2.1.8.md  2.1.9_optimization_integration.md  2.1_polynomial_parameterization_overview.md  3.1_polynomial_class_implementation.md  3.2.md  3.3.md  4.1.md  4.2_optimizer_initialization_strategy.md  4.3_optimization_stopping_criteria.md  5.1.md  5.2_variable_normalization_scaling.md  5.3_overfitting_detection_diagnostics.md  6.1_solution_verification_validation.md  6.2_sensitivity_analysis_parameter_tuning.md  all_steps_overview.md  input_data_format.md  mixed_approximation.md  step_1.1_implementation_summary.md  step_1.2_implementation_summary.md
examples/: CMakeLists.txt  reading_from_files.cpp  simple_example.cpp
examples/data/: approximation.csv  config.yaml  interpolation.csv  repulsion.csv
include/mixed_approximation/: barrier_safety_monitor.h  composite_polynomial.h  config_reader.h  constrained_polynomial.h  convergence_monitor.h  correction_polynomial.h  decomposition.h  edge_case_handler.h  edge_case_result_formatter.h  functional.h  gauss_quadrature.h  i_polynomial.h  initialization_strategy.h  interpolation_basis.h  lru_cache.h  mixed_approximation.h  numerical_anomaly_monitor.h  objective_functor.h  optimization_post_processor.h  optimization_problem_data.h  optimizer.h  overfitting_detector.h  parameterization_data.h  parameterization_verification.h  polynomial.h  sensitivity_analysis.h  solution_validator.h  types.h  validator.h  variable_normalizer.h  weight_multiplier.h
src/: barrier_safety_monitor.cpp  composite_polynomial.cpp  composite_polynomial_analytic.cpp  composite_polynomial_cache.cpp  config_reader.cpp  constrained_polynomial.cpp  convergence_monitor.cpp  correction_polynomial.cpp  correction_polynomial_basis.cpp  correction_polynomial_cache.cpp  correction_polynomial_eval.cpp  correction_polynomial_func.cpp  correction_polynomial_ls.cpp  decomposition.cpp  edge_case_handler.cpp  edge_case_handler_handlers.cpp  edge_case_handler_utilities.cpp  edge_case_result_formatter.cpp  functional.cpp  functional_class.cpp  functional_diagnostics.cpp  functional_evaluator_cached.cpp  functional_evaluator_core.cpp  functional_evaluator_robust.cpp  gauss_quadrature.cpp  initialization_strategy.cpp  interpolation_basis.cpp  interpolation_basis_barycentric.cpp  interpolation_basis_eval.cpp  interpolation_basis_lagrange.cpp  interpolation_basis_newton.cpp  lbfgs_optimizer.cpp  mixed_approximation.cpp  numerical_anomaly_monitor.cpp  objective_functor.cpp  optimization_post_processor.cpp  optimization_problem_data.cpp  optimizer.cpp  overfitting_detector.cpp  parameterization_data.cpp  (+11 more)
tests/: CMakeLists.txt  test_2_1_6_parameterization_verification.cpp  test_2_1_7_parameterization_data_structures.cpp  test_2_1_8_edge_case_handling.cpp  test_2_1_9_optimization_integration.cpp  test_2_1_polynomial_parameterization_overview.cpp  test_3_1_polynomial_class_implementation.cpp  test_3_2_functional_components_computation.cpp  test_4_2_optimizer_initialization_strategy.cpp  test_4_3_optimization_stopping_criteria.cpp  test_5_1_barrier_singularity_protection.cpp  test_5_2_variable_normalization_scaling.cpp  test_5_3_overfitting_detection_diagnostics.cpp  test_6_1_solution_verification_validation.cpp  test_6_2_sensitivity_analysis.cpp  test_basic.cpp  test_decomposition.cpp  test_edge_case_handler.cpp  test_functional.cpp  test_lbfgs_optimizer.cpp  test_polynomial_core.cpp  test_step_2_1_5.cpp  test_step_2_1_9.cpp  test_step_3_3.cpp  test_validator_advanced.cpp  test_validator_integration.cpp
tests/correction_polynomial/: test_correction_polynomial.cpp
tests/decomposition/: test_decomposition.cpp
tests/integration/: test_integration.cpp  test_step_2_1_integration.cpp
tests/interpolation_basis/: test_interpolation_basis.cpp
tests/validator/: test_validator_advanced.cpp  test_validator_basic.cpp
tests/weight_multiplier/: test_weight_multiplier.cpp
